# tool_calling_2.0

./: .gitignore  Cargo.toml  README.md  clean-code.md  harness.md  plan.md
.github/workflows/: ci.yml
crates/ptc-analyze/: Cargo.toml
crates/ptc-analyze/src/: lib.rs  stats.rs
crates/ptc-dsl/: Cargo.toml
crates/ptc-dsl/src/: ast.rs  error.rs  interp.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs  validator.rs
crates/ptc-harness/: Cargo.toml
crates/ptc-harness/src/: baseline.rs  batch.rs  extract.rs  fixtures.rs  gate.rs  grader.rs  lib.rs  negative.rs  react.rs  record.rs  runner.rs  suite.rs  task.rs  taxonomy.rs
crates/ptc-llm/: Cargo.toml
crates/ptc-llm/src/: anthropic.rs  lib.rs  mock.rs  ollama.rs  openai.rs
crates/ptc-tools/: Cargo.toml
crates/ptc-tools/src/: lib.rs  mock.rs
prompts/: sys-baseline-v1.md  sys-v1.md
tasks/: easy_alice_meeting_hours.toml  easy_alice_q3_expense.toml  easy_carol_meeting_count.toml  easy_dave_q1_expense.toml  easy_eng_headcount.toml  easy_first_member.toml  easy_q3_budget.toml  hard_busiest_eng_member.toml  hard_email_each_eng.toml  hard_email_over_budget.toml  hard_eng_annual_total.toml  hard_eng_multi_event_count.toml  hard_eng_over_q3_budget_count.toml  hard_eng_q3_overage_total.toml  medium_alice_vs_bob_q3.toml  medium_bob_annual_expense.toml  medium_eng_q3_total.toml  medium_eng_total_meeting_hours.toml  medium_first_event_title.toml  medium_frank_meeting_hours.toml  medium_last_eng_member.toml  medium_sales_q3_total.toml
