[workspace]
resolver = "2"
members = [
    "crates/ptc-dsl",
    "crates/ptc-tools",
    "crates/ptc-harness",
    "crates/ptc-llm",
    "crates/ptc-analyze",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
